# vextor

./: .clang-format  .clangd  .gitignore  .pre-commit-comfig.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: CMakeLists.txt  core_distance_bench.cpp  core_sq8_bench.cpp  index_flat_index_bench.cpp  index_hnsw_index_bench.cpp  perf_test.cpp
benchmarks/sift1m/: CMakeLists.txt  download.sh  results.md  sift1m_bench.cpp
docs/: PRD.md
python/: CMakeLists.txt  bindings.cpp  test_vextor.py
src/core/: distance.cpp  distance.h  query_result.h  search_result.h  sq8.cpp  sq8.h  types.h  vexdb.cpp  vexdb.h
src/index/: flat_index.h  hnsw_index.h  hnsw_params.h
src/persistence/: format.h  loader.cpp  loader.h  serializer.cpp  serializer.h
src/segment/: active_segment.cpp  active_segment.h  id_mapping.cpp  id_mapping.h  sealed_segment.cpp  sealed_segment.h  segment_manager.cpp  segment_manager.h
src/store/: concept.h  format.h  in_memory_store.cpp  in_memory_store.h  mmap_store.cpp  mmap_store.h
src/vexdb/: vexdb.h
src/vextor/: vextor.h
tests/: CMakeLists.txt  core_distance_test.cpp  core_sq8_test.cpp  core_types_test.cpp  index_flat_index_test.cpp  index_hnsw_index_test.cpp  persistence_test.cpp  segment_active_segment_test.cpp  segment_id_mapping_test.cpp  segment_sealed_segment_test.cpp  segment_segment_manager_test.cpp  store_in_memory_store_test.cpp  store_mmap_store_test.cpp  vexdb_public_api_test.cpp  vextor_public_api_test.cpp
